nextcloud/kubernetes/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.mandariini.uk`)
      services:
        - name: nextcloud
          namespace: nextcloud
          port: 80
  tls:
    secretName: mandariini-uk-tls
